[project]
name = "hedgedoc-backup"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "markdown>=3.8",
]

[tool.ruff.lint]
ignore = ["CPY001"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
annotated_tag = true
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
